docs: 更新部署与配置文档说明